Fix crumb alignment with new notification layout
Summary: Crumbs misalign because the hit area on the icons was 2px too large.

Test Plan: Test on pages with crumbs. IE, FF, Chrome...

Reviewers: epriestley, btrahan

Subscribers: Korvin, epriestley

Differential Revision: https://secure.phabricator.com/D10949

--- a/webroot/rsrc/css/application/base/main-menu-view.css
+++ b/webroot/rsrc/css/application/base/main-menu-view.css
@@ -292,7 +292,7 @@
   width: 18px;
   height: 18px;
   float: left;
-  padding: 9px 6px 9px 4px;
+  padding: 8px 6px 8px 4px;
   color: white;
   font-size: 18px;
   line-height: 20px;
